Un nouveau commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Un super gros titre !</h1>
 	
-	je suis le grand maitre de tous les temps
+	je suis le grand maitre de tous les temps. Un jour le monde me s'ouvrira
 </body>
 </html>
